<resources>

    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>

    <string name="title_following">Following</string>
    <string name="toolbar_bio">Bio</string>
    <string name="toolbar_details">Details</string>
    <string name="mob_smskey">12dcf18d9a848</string>
    <string name="mob_smssecret">64132498f52a24e8996cee6036f13979</string>
    <string name="app_name">来谈</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名/手机号码&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请再次输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>

    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新的朋友</string>

    <string name="chat">聊天</string>
    <string name="add_friend">添加好友</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="pop_photo">照相</string>
    <string name="pop_choose">从相册选择</string>


    <string name="title_changelog">使用须知</string>
    <string name="changelog_close">关闭</string>
    <string name="click_to_top_tip">点击空白区域直接返回顶部</string>

    <string name="test_content">Android 是目前最流行的移动操作系统之一。 随着新版本的不断发布， Android的功能也日益强大， 涌现了很多流行的应用程序， 也催生了一大批的优秀的组件。
本文试图将目前流行的组件收集起来以供参考， 如果你发现本文还没有列出的组件，欢迎在评论中贴出来，我会定期的更新本文。</string>

</resources>
