<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">

    <include layout="@layout/include_navi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/input_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_title"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_account"
            android:drawablePadding="25dip"
            android:hint="用户名"
            android:paddingLeft="15dip"
            android:shadowDx="0.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:textColorHint="#ffdddddd" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/base_horization_line" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_title"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawablePadding="25dip"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/base_horization_line" />

        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_title"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_icon_password"
            android:drawablePadding="25dip"
            android:hint="@string/login_email_hint"
            android:inputType="textPassword"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/school_tm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/input_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/et_tm"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="所属院系(默认管理系)"
            android:paddingLeft="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/but_tm"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="选择院系"

            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>