<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">

    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:id="@+id/input1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/input_bg"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/height_title"
                    android:background="@color/transparent"
                    android:drawableLeft="@mipmap/login_icon_account"
                    android:drawablePadding="25dip"
                    android:hint="手机号码"
                    android:paddingLeft="15dip"
                    android:shadowDx="0.0"
                    android:shadowDy="1.0"
                    android:shadowRadius="1.0"
                    android:textColorHint="#ffdddddd" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@mipmap/base_horization_line" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/height_title"
                    android:background="@color/transparent"
                    android:drawableLeft="@mipmap/login_icon_password"
                    android:drawablePadding="25dip"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="15dip"
                    android:textColorHint="#ffdddddd" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_title"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@drawable/btn_login_selector"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>


        <!-- 通过验证码登录-->
        <LinearLayout
            android:id="@+id/input2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="手机快速登录，需要已注册的用户"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@mipmap/base_horization_line" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/height_title"
                android:background="@color/transparent"
                android:drawablePadding="25dip"
                android:hint="用户名/手机号码"
                android:paddingLeft="15dip"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColorHint="#ffdddddd" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@mipmap/base_horization_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_vrify"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_title"
                    android:layout_weight="1.0"
                    android:background="@color/transparent"
                    android:drawablePadding="25dip"
                    android:hint="验证码登录"
                    android:paddingLeft="15dip"
                    android:shadowDx="0.0"
                    android:shadowDy="1.0"
                    android:shadowRadius="1.0"
                    android:textColorHint="#ffdddddd" />

                <Button
                    android:id="@+id/but_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="0.3"
                    android:background="@drawable/btn_login_selector"
                    android:gravity="center"
                    android:text="获取验证码"
                    android:textColor="@color/base_color_text_white"
                    android:textSize="@dimen/text_size_large" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@mipmap/base_horization_line" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_title"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@drawable/btn_onclick_selector"
                android:enabled="false"
                android:gravity="center"
                android:text="登录"
                android:textColor="@color/base_color_text_white"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/fl"

        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_sina"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/sina_logo" />

            <TextView
                android:id="@+id/tv_sina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="微博登录" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_sms"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/sms_logo" />

            <TextView
                android:id="@+id/tv_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="快速登录" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_findpw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginLeft="40dp"
            android:text="忘记密码？"
            android:textColor="@color/color_theme"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbot"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/register_txt1"
            android:textColor="@color/base_color_text_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/register_txt2"
            android:textColor="@color/color_theme"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>